<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/bg_color"
	>
	
	<TextView
		android:id="@+id/launch_desc"
		android:layout_width="match_parent"
		android:layout_height="40dp"
		android:layout_marginTop="8dp"
		android:gravity="center"
		android:text="Set Start Date"
		android:textAllCaps="true"
		android:textColor="@android:color/white"
		android:textSize="18sp"
		android:textStyle="bold"
		app:layout_constraintTop_toTopOf="parent"
		/>
	
	<DatePicker
		android:id="@+id/datePicker"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/date_picker_margin"
		android:layout_marginEnd="@dimen/date_picker_margin"
		android:layout_marginLeft="@dimen/date_picker_margin"
		android:layout_marginRight="@dimen/date_picker_margin"
		android:layout_marginStart="@dimen/date_picker_margin"
		android:padding="@dimen/date_picker_padding"
		app:layout_constraintBottom_toTopOf="@+id/launch_next"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/launch_desc"/>
	
	<Button
		android:id="@+id/launch_next"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginRight="8dp"
		android:text="Next"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"/>
	
	<Button
		android:id="@+id/launch_skip"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginLeft="8dp"
		android:text="Skip"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"/>

</android.support.constraint.ConstraintLayout>