...
		android:textSize="18sp"
		android:textStyle="bold"
		app:layout_constraintTop_toTopOf="parent"
		/>
	
	<NumberPicker
		android:id="@+id/numberPicker"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/date_picker_margin"
		android:layout_marginEnd="@dimen/date_picker_margin"
		android:layout_marginLeft="@dimen/date_picker_margin"
		android:layout_marginRight="@dimen/date_picker_margin"
		android:layout_marginStart="@dimen/date_picker_margin"
		android:padding="@dimen/date_picker_padding"
		app:layout_constraintBottom_toTopOf="@+id/launch_notice_next"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/launch_notice_desc"
		/>
	
	<!--<com.alexzaitsev.meternumberpicker.MeterNumberPicker-->
...
